# term-calc

./: .gitignore  Cargo.toml  stupid
calculate/: Cargo.toml
calculate/src/: config.rs  identifiers.rs  lib.rs  parser.rs  tokenizer.rs
src/: config.rs  functions.rs  identifiers.rs  lib.rs  main.rs  parser.rs  tokenizer.rs  traverse.rs
term/: Cargo.toml
term-calc/: Cargo.toml
term-calc/src/: main.rs
term/src/: main.rs
web/: Cargo.toml
web-calc/: Cargo.toml
web-calc/src/: main.rs
web/src/: main.rs
