[package]
name = "term-calculator"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "term/src/main.rs"
name = "term"

[dependencies]
calculate = {path = "calculate"}
home = "0.5.3"
toml = "0.5.8"
serde = {version = "1.0.136", features = ["derive"]}

[workspace]
members = [
    "calculate",
    "term",
    "web"
]

[profile.release]
lto = true
strip = true