[package]
name = "web-calc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", default-features = false, features = ["csr"] }
web-sys = { version = "0.3.61", features = ["InputEvent"] }
calculate = { path = "../calculate" }